# django-ranks

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  manage.py  setup.cfg  setup.py  test_settings.py
django_ranks/: apps.py  base.py  models.py  signals.py  test_models.py  tests.py
docs/: conf.py  index.rst  requirements.txt
docs/modules/: models.rst
docs/source/: conf.py  index.rst
